# doomsday

./: Cargo.toml  README.md
examples/: day_of_the_week.rs  day_of_week.rs  leap.rs  simple.rs
src/: day.rs  doomsday.rs  lib.rs  main.rs  month.rs
